# Wanderers

./: .gitignore  CMakeLists.txt  README.md
include/: ComponentMgr.hpp  ComponentMgr.hpp~  ComponentReader.hpp  Entity.hpp  Entity.hpp~  EntityFactory.hpp  EntityFactory.hpp~  EntityMgr.hpp  EntityMgr.hpp~  vmath.h
include/GL/: gl3w.h
include/components/ai/: TestAIMgr.hpp  TestAIMgr.hpp~
include/components/graphics/: OpenGLMgr.hpp  OpenGLMgr.hpp~
include/components/physics/: TestPhysicsMgr.hpp
src/: CMakeLists.txt  CMakeLists.txt~  EntityFactory.cpp  EntityMgr.cpp  EntityMgr.cpp~  main.cpp  main.cpp~
src/GL/: gl3w.c
src/components/ai/: TestAIMgr.cpp
src/components/graphics/: OpenGLMgr.cpp  OpenGLMgr.cpp~
src/components/physics/: TestPhysicsMgr.cpp
